# QiInterview

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  credentials.py  interview.py  jobs.py  reports.py  resume.py  voice_ws.py
backend/app/core/: auth_dep.py  credentials.py  passwords.py  rsa_keys.py  voice_router.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  interview.py  job.py  user.py
backend/app/prompts/: evaluator.j2  final_report.j2  initial_score.j2  interrupt.j2  opening.j2  resume_extract.j2  round_question.j2  system_interviewer.j2  wrap_up.j2
backend/app/schemas/: __init__.py  interview.py  job.py
backend/app/services/: interviewer.py  llm.py  llm_mock.py  llm_pool.py  mail.py  report.py  resume_parser.py  scoring.py  stt.py  tts.py  tts_pool.py  voice_protocol.py
backend/app/services/jobs/: __init__.py  alibaba.py  base.py  bytedance.py  cache.py  refresher.py  tencent.py
docs/: SECURITY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/worklets/: pcm-capture.js
frontend/src/: index.css  main.tsx
frontend/src/components/: AppShell.tsx  JobPicker.tsx  RequireAuth.tsx  ScoreChart.tsx  WaveAnimation.tsx
frontend/src/lib/: api.ts  audioCapture.ts  audioPlayer.ts  utils.ts  ws.ts
frontend/src/pages/: ForgotPasswordPage.tsx  HistoryPage.tsx  InterviewPage.tsx  (+5 more)
scripts/: dev.ps1  e2e.ps1
(+12 files in other folders)
