[project]
name = "qiinterview-backend"
version = "0.1.0"
description = "QiInterview AI 模拟面试系统 - 后端"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "openai>=1.55.0",
    "httpx>=0.27.2",
    "websockets>=13.1",
    "jinja2>=3.1.4",
    "apscheduler>=3.10.4",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.10",
    # Phase 5 / P0：登录 RSA-OAEP 端到端加密用 ``cryptography``。后端
    # ``backend/app/core/rsa_keys.py`` 启动时按需生成 2048-bit 密钥对，
    # ``GET /api/auth/pubkey`` 派发公钥，``register/login`` 用私钥解 OAEP。
    "cryptography>=43.0.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
